# CryptoTrade

./: .gitignore  README.md  pyproject.toml  requirements.txt
trading_bot/: __init__.py  main.py
trading_bot/backtest/: __init__.py  engine.py  performance.py
trading_bot/broker/: base.py  vnpy_broker.py
trading_bot/config/: settings.py
trading_bot/data/: ccxt_provider.py  downloader.py  models.py  provider.py
trading_bot/live/: engine.py
trading_bot/plots/: __init__.py  comparison.py  performance.py
trading_bot/strategy/: base.py  moving_average.py
trading_bot/tests/: test_strategy.py
trading_bot/utils/: logging.py
